Added some data analysis about the education dataset

--- a/csv_datasets.ipynb
+++ b/csv_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "[73109 rows x 6 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "[65662 rows x 6 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "[65662 rows x 4 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "[245 rows x 4 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "California        80.231014"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
        "Wisconsin            79.98"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
        "Wisconsin                   79.980000"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1466,7 @@
        "Wyoming                     80.161017"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1501,7 @@
        " <a list of 15 Patch objects>)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1827,7 @@
        "Alabama                     74.813987"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1854,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2009,7 +2009,7 @@
        "[186 rows x 5 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2023,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2178,7 +2178,7 @@
        "[180 rows x 5 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2205,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2271,7 +2271,7 @@
        "Arkansas                  39171.0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2289,7 +2289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2355,7 +2355,7 @@
        "Arkansas          3013825.0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2388,7 +2388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2461,7 +2461,7 @@
        "Arkansas          3013825.0            39171.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2474,7 +2474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2558,7 +2558,7 @@
        "4       Arkansas    3013825.0            39171.0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2573,7 +2573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2975,7 +2975,7 @@
        "Wyoming                 577737.0            54713.0        80.161017"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2988,7 +2988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3390,7 +3390,7 @@
        "Mississippi            2986530.0            34752.0        75.026941"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3402,7 +3402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -3415,7 +3415,7 @@
        " <a list of 15 Patch objects>)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3456,7 +3456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -3668,7 +3668,7 @@
        "[5 rows x 45 columns]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3694,7 +3694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3837,7 +3837,7 @@
        "[7150 rows x 4 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3860,7 +3860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3926,7 +3926,7 @@
        "CA                            264"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3941,7 +3941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -4007,7 +4007,7 @@
        "AZ                       43"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4022,7 +4022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -4056,23 +4056,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>AK</td>\n",
-       "      <td>6</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>AL</td>\n",
-       "      <td>42</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>AR</td>\n",
-       "      <td>26</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>AZ</td>\n",
-       "      <td>46</td>\n",
+       "      <td>42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>CA</td>\n",
-       "      <td>264</td>\n",
+       "      <td>239</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4081,21 +4081,21 @@
       "text/plain": [
        "       N_of_technical_trade_schools\n",
        "STATE                              \n",
-       "AK                                6\n",
-       "AL                               42\n",
-       "AR                               26\n",
-       "AZ                               46\n",
-       "CA                              264"
+       "AK                                2\n",
+       "AL                               16\n",
+       "AR                               32\n",
+       "AZ                               42\n",
+       "CA                              239"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#... and trade and technical schools\n",
-    "technical_schools_grouped=colleges_universities_columns[[x==611310 for x in colleges_universities_columns.NAICS_CODE]].groupby('STATE')\n",
+    "technical_schools_grouped=colleges_universities_columns[[x==611511 or x==611519 for x in colleges_universities_columns.NAICS_CODE]].groupby('STATE')\n",
     "technical_schools=technical_schools_grouped.count()[['NAME']]\n",
     "technical_schools.columns=['N_of_technical_trade_schools']\n",
     "technical_schools.head()"
@@ -4103,7 +4103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -4143,19 +4143,19 @@
        "      <td>AK</td>\n",
        "      <td>6.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>AL</td>\n",
        "      <td>42.0</td>\n",
        "      <td>36.0</td>\n",
-       "      <td>42.0</td>\n",
+       "      <td>16.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>AR</td>\n",
        "      <td>26.0</td>\n",
        "      <td>26.0</td>\n",
-       "      <td>26.0</td>\n",
+       "      <td>32.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>AS</td>\n",
@@ -4167,7 +4167,7 @@
        "      <td>AZ</td>\n",
        "      <td>46.0</td>\n",
        "      <td>43.0</td>\n",
-       "      <td>46.0</td>\n",
+       "      <td>42.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4184,14 +4184,14 @@
        "\n",
        "       N_of_technical_trade_schools  \n",
        "STATE                                \n",
-       "AK                              6.0  \n",
-       "AL                             42.0  \n",
-       "AR                             26.0  \n",
+       "AK                              2.0  \n",
+       "AL                             16.0  \n",
+       "AR                             32.0  \n",
        "AS                              NaN  \n",
-       "AZ                             46.0  "
+       "AZ                             42.0  "
       ]
      },
-     "execution_count": 138,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4205,7 +4205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -4245,19 +4245,19 @@
        "      <td>AK</td>\n",
        "      <td>6.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>AL</td>\n",
        "      <td>42.0</td>\n",
        "      <td>36.0</td>\n",
-       "      <td>42.0</td>\n",
+       "      <td>16.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>AR</td>\n",
        "      <td>26.0</td>\n",
        "      <td>26.0</td>\n",
-       "      <td>26.0</td>\n",
+       "      <td>32.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>AS</td>\n",
@@ -4269,7 +4269,7 @@
        "      <td>AZ</td>\n",
        "      <td>46.0</td>\n",
        "      <td>43.0</td>\n",
-       "      <td>46.0</td>\n",
+       "      <td>42.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4286,14 +4286,14 @@
        "\n",
        "       N_of_technical_trade_schools  \n",
        "STATE                                \n",
-       "AK                              6.0  \n",
-       "AL                             42.0  \n",
-       "AR                             26.0  \n",
+       "AK                              2.0  \n",
+       "AL                             16.0  \n",
+       "AR                             32.0  \n",
        "AS                              0.0  \n",
-       "AZ                             46.0  "
+       "AZ                             42.0  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4316,7 +4316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -4542,7 +4542,7 @@
        "[5 rows x 62 columns]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4554,7 +4554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -4665,7 +4665,7 @@
        "4      NaN                 6.102  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
