Add crime dataset analysis, I stop as soon as I realize we have only 46 states :P

--- a/crime.ipynb
+++ b/crime.ipynb
@@ -29,7 +29,9 @@
     "- PolicPerPop (police officers per 100k inhabitants) difference with above?\n",
     "- NumKindsDrugsSeiz (Number of different kinds of drugs sized)\n",
     "- PctUsePubTrans (percentage of people using public means of transport for commuting)\n",
-    "- ViolentCrimesPerPop (Number of total crimes per 100k population)"
+    "- ViolentCrimesPerPop (Number of total crimes per 100k population)\n",
+    "\n",
+    "In fact, they may turn as useful information when computing our human development index."
    ]
   },
   {
@@ -45,6 +47,371 @@
     "import matplotlib.pyplot as plt\n",
     "import re\n",
     "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Alabama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Alaska</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Arizona</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Arkansas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>California</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        State\n",
+       "0     Alabama\n",
+       "1      Alaska\n",
+       "2     Arizona\n",
+       "3    Arkansas\n",
+       "4  California"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We start by loading the list of states in the USA\n",
+    "states_json = pd.read_json('Data/states.json')\n",
+    "states = []\n",
+    "\n",
+    "for row in states_json['data']:\n",
+    "    states.append(row['State'])\n",
+    "    \n",
+    "states_df = pd.DataFrame({\"State\": states})\n",
+    "states_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dataset is not provided with the names of the columns, therefore we first get them from the dataset description file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['state', 'county', 'community', 'communityname', 'fold', 'population', 'householdsize', 'racepctblack', 'racePctWhite', 'racePctAsian', 'racePctHisp', 'agePct12t21', 'agePct12t29', 'agePct16t24', 'agePct65up', 'numbUrban', 'pctUrban', 'medIncome', 'pctWWage', 'pctWFarmSelf', 'pctWInvInc', 'pctWSocSec', 'pctWPubAsst', 'pctWRetire', 'medFamInc', 'perCapInc', 'whitePerCap', 'blackPerCap', 'indianPerCap', 'AsianPerCap', 'OtherPerCap', 'HispPerCap', 'NumUnderPov', 'PctPopUnderPov', 'PctLess9thGrade', 'PctNotHSGrad', 'PctBSorMore', 'PctUnemployed', 'PctEmploy', 'PctEmplManu', 'PctEmplProfServ', 'PctOccupManu', 'PctOccupMgmtProf', 'MalePctDivorce', 'MalePctNevMarr', 'FemalePctDiv', 'TotalPctDiv', 'PersPerFam', 'PctFam2Par', 'PctKids2Par', 'PctYoungKids2Par', 'PctTeen2Par', 'PctWorkMomYoungKids', 'PctWorkMom', 'NumIlleg', 'PctIlleg', 'NumImmig', 'PctImmigRecent', 'PctImmigRec5', 'PctImmigRec8', 'PctImmigRec10', 'PctRecentImmig', 'PctRecImmig5', 'PctRecImmig8', 'PctRecImmig10', 'PctSpeakEnglOnly', 'PctNotSpeakEnglWell', 'PctLargHouseFam', 'PctLargHouseOccup', 'PersPerOccupHous', 'PersPerOwnOccHous', 'PersPerRentOccHous', 'PctPersOwnOccup', 'PctPersDenseHous', 'PctHousLess3BR', 'MedNumBR', 'HousVacant', 'PctHousOccup', 'PctHousOwnOcc', 'PctVacantBoarded', 'PctVacMore6Mos', 'MedYrHousBuilt', 'PctHousNoPhone', 'PctWOFullPlumb', 'OwnOccLowQuart', 'OwnOccMedVal', 'OwnOccHiQuart', 'RentLowQ', 'RentMedian', 'RentHighQ', 'MedRent', 'MedRentPctHousInc', 'MedOwnCostPctInc', 'MedOwnCostPctIncNoMtg', 'NumInShelters', 'NumStreet', 'PctForeignBorn', 'PctBornSameState', 'PctSameHouse85', 'PctSameCity85', 'PctSameState85', 'LemasSwornFT', 'LemasSwFTPerPop', 'LemasSwFTFieldOps', 'LemasSwFTFieldPerPop', 'LemasTotalReq', 'LemasTotReqPerPop', 'PolicReqPerOffic', 'PolicPerPop', 'RacialMatchCommPol', 'PctPolicWhite', 'PctPolicBlack', 'PctPolicHisp', 'PctPolicAsian', 'PctPolicMinor', 'OfficAssgnDrugUnits', 'NumKindsDrugsSeiz', 'PolicAveOTWorked', 'LandArea', 'PopDens', 'PctUsePubTrans', 'PolicCars', 'PolicOperBudg', 'LemasPctPolicOnPatr', 'LemasGangUnitDeploy', 'LemasPctOfficDrugUn', 'PolicBudgPerPop', 'ViolentCrimesPerPop']\n"
+     ]
+    }
+   ],
+   "source": [
+    "column_names = []\n",
+    "with open(\"Data/crimes_column_names.txt\", 'r') as f:\n",
+    "    for line in f:\n",
+    "        # The format for every line is @attribute state numeric\n",
+    "        name = \" \".join(line.split(\"@attribute \")[1].split(\" \")[:-1])\n",
+    "        column_names.append(name)\n",
+    "print(column_names)        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th>county</th>\n",
+       "      <th>community</th>\n",
+       "      <th>communityname</th>\n",
+       "      <th>fold</th>\n",
+       "      <th>population</th>\n",
+       "      <th>householdsize</th>\n",
+       "      <th>racepctblack</th>\n",
+       "      <th>racePctWhite</th>\n",
+       "      <th>racePctAsian</th>\n",
+       "      <th>...</th>\n",
+       "      <th>LandArea</th>\n",
+       "      <th>PopDens</th>\n",
+       "      <th>PctUsePubTrans</th>\n",
+       "      <th>PolicCars</th>\n",
+       "      <th>PolicOperBudg</th>\n",
+       "      <th>LemasPctPolicOnPatr</th>\n",
+       "      <th>LemasGangUnitDeploy</th>\n",
+       "      <th>LemasPctOfficDrugUn</th>\n",
+       "      <th>PolicBudgPerPop</th>\n",
+       "      <th>ViolentCrimesPerPop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>Lakewoodcity</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>53</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>Tukwilacity</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>?</td>\n",
+       "      <td>0.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>24</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>Aberdeentown</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>?</td>\n",
+       "      <td>0.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>34</td>\n",
+       "      <td>5</td>\n",
+       "      <td>81440</td>\n",
+       "      <td>Willingborotownship</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>?</td>\n",
+       "      <td>0.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>42</td>\n",
+       "      <td>95</td>\n",
+       "      <td>6096</td>\n",
+       "      <td>Bethlehemtownship</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>?</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>?</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 128 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   state county community        communityname  fold  population  \\\n",
+       "0      8      ?         ?         Lakewoodcity     1        0.19   \n",
+       "1     53      ?         ?          Tukwilacity     1        0.00   \n",
+       "2     24      ?         ?         Aberdeentown     1        0.00   \n",
+       "3     34      5     81440  Willingborotownship     1        0.04   \n",
+       "4     42     95      6096    Bethlehemtownship     1        0.01   \n",
+       "\n",
+       "   householdsize  racepctblack  racePctWhite  racePctAsian  ...  LandArea  \\\n",
+       "0           0.33          0.02          0.90          0.12  ...      0.12   \n",
+       "1           0.16          0.12          0.74          0.45  ...      0.02   \n",
+       "2           0.42          0.49          0.56          0.17  ...      0.01   \n",
+       "3           0.77          1.00          0.08          0.12  ...      0.02   \n",
+       "4           0.55          0.02          0.95          0.09  ...      0.04   \n",
+       "\n",
+       "   PopDens  PctUsePubTrans  PolicCars  PolicOperBudg  LemasPctPolicOnPatr  \\\n",
+       "0     0.26            0.20       0.06           0.04                  0.9   \n",
+       "1     0.12            0.45          ?              ?                    ?   \n",
+       "2     0.21            0.02          ?              ?                    ?   \n",
+       "3     0.39            0.28          ?              ?                    ?   \n",
+       "4     0.09            0.02          ?              ?                    ?   \n",
+       "\n",
+       "   LemasGangUnitDeploy  LemasPctOfficDrugUn  PolicBudgPerPop  \\\n",
+       "0                  0.5                 0.32             0.14   \n",
+       "1                    ?                 0.00                ?   \n",
+       "2                    ?                 0.00                ?   \n",
+       "3                    ?                 0.00                ?   \n",
+       "4                    ?                 0.00                ?   \n",
+       "\n",
+       "   ViolentCrimesPerPop  \n",
+       "0                 0.20  \n",
+       "1                 0.67  \n",
+       "2                 0.43  \n",
+       "3                 0.12  \n",
+       "4                 0.03  \n",
+       "\n",
+       "[5 rows x 128 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We start by loading the list of states in the USA\n",
+    "crime = pd.read_csv('Data/communities.data', names=column_names)\n",
+    "\n",
+    "crime.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can immediately see only by looking at the head of our dataset that there are a lot of missing values. \n",
+    "\n",
+    "The first thing that we have to check is if we have all states: They should be 51."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(crime.state.unique())"
    ]
   }
  ],
