changing rent output

--- a/rentData.ipynb
+++ b/rentData.ipynb
@@ -1277,6 +1277,7 @@
    "outputs": [],
    "source": [
     "#saving output\n",
+    "output = output[[\"Location\", \"Price_2018_Studio\", \"Price_2018_1br\", \"Price_2018_2br\", \"Price_2018_3br\", \"Price_2018_4br\"]]\n",
     "output.to_pickle('Pickles/rent.pickle')"
    ]
   },
