Add gitignore and start writing merge file

--- a/Milestone2.ipynb
+++ b/Milestone2.ipynb
@@ -1,11 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Milestone 2\n",
+    "In this milestone, our goal has been the collection, the cleaning and the analysis of the data in the datasets that we have decided to use for our project.\n",
+    "\n",
+    "Given the high number of datasets that we have analyzed, we decided to perform the data cleaning process in separate files, in order to avoid one single notebook with a huge amount of lines of code, all independent from each other.\n",
+    "\n",
+    "The notebook that we have written are:\n",
+    "- crime.ipynb: a crime dataset is analyzed, we hope to extract good insights on the quality of life given the number of crimes committed in all states\n",
+    "- McDonalds.ipynb: a dataset of alimentation quality (number of fast food restaurants per state, obesity rate, people eating unhealthy).\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What comes next?"
+   ]
   }
  ],
  "metadata": {
